# Microfluidics-Chip

./: .gitignore  CHANGELOG.md  FINAL_REFACTORING_PLAN.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  pytest.ini
configs/: adaptive_detection.yaml  default.yaml  two_class.yaml
configs/experiments/: ablation_a_dual.yaml  ablation_a_single.yaml  ablation_b_mixed.yaml  ablation_b_real.yaml  ablation_b_synthetic.yaml  ablation_d_loss.yaml
configs/templates/: pinwheel_v3_centered.json  pinwheel_v3_raw.json
correction/: run_correction_pipeline.py
dataset/yolo_dataset/: classes.txt  data.yaml  notes.json
deprecated/correction/: correction_utils.py  rename.py
deprecated/gpc/: gpc_utils.py  (+1 more)
docs/: ADAPTIVE_DETECTION.md  AUGMENTATION_VALIDATION.md  BLANK_CHROMATICITY_REPORT.md  CLI_REFERENCE.md  DATA_PREPARATION.md  LOGGING.md  README.md  TRAINING_IMPROVEMENT.md  UNET_AUGMENTATION.md  VISUALIZATION.md  YOLO_OPTIMIZATION.md
examples/: README.md  adaptive_detection_demo.py  end_to_end.py
match/: match_patch.py
preprocess/: check_synthesis.py  dabug_yolo_raw.py  debug_sort.py  synthesizer_chip.py  visualize_dataset.py
scripts/: augment_yolo_dataset.py  build_stage2_paired_dataset.py  compare_stage1_templates.py  debug_data_check.py  evaluate_experiments.py  migrate_labels_to_single_class.py  offline_orientation_pairing.py  prepare_mixed_dataset.py  prepare_training_data.py  quick_validation.py  regress_stage1_postprocess_dirty.py  rename_dataset.py  run_stage1_ablation.py  train_experiments.py  train_stage2.py  train_stage2_improved.py  train_yolo.py  validate_blank_modes_batch.py  validate_stage1_canonical_batch.py  verify_npz_format.py  visualize_synthesis.py
utils/: visualize_yolo.py
(+194 files in other folders)
